--- a/D-1/23051606_AD_Lab_0.1.ipynb
+++ b/D-1/23051606_AD_Lab_0.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8d8fb60b",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,365 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "5\n",
+      "[1, 2, 3, 4, 5, 56, 6]\n",
+      "[]\n"
      ]
     }
    ],
    "source": [
     "i=5\n",
-    "print(i)"
+    "print(i)\n",
+    "list = [1,2,3,4,5,56,6]\n",
+    "print(list)\n",
+    "list.clear()\n",
+    "print(list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7755c6f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'float'>\n",
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5 \n",
+    "b = 0.9\n",
+    "c = [1,2,3,4,5,6]\n",
+    "d = (1,2,57,8)\n",
+    "e = {\"A\":1,\"B\":2,\"C\":3}\n",
+    "\n",
+    "print(type(a))\n",
+    "print(type(b))\n",
+    "print(type(c))\n",
+    "print(type(d))\n",
+    "print(type(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eec37130",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23051606\n",
+      "Omm Tripathi\n",
+      "BTECH - CSE\n"
+     ]
+    }
+   ],
+   "source": [
+    "roll_no = 23051606\n",
+    "name = \"Omm Tripathi\"\n",
+    "branch = \"BTECH - CSE\"\n",
+    "print(roll_no)\n",
+    "print(name)\n",
+    "print(branch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "375bec28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "40\n",
+      "-3\n",
+      "0.625\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5 \n",
+    "b = 8\n",
+    "print(a+b)\n",
+    "print(a*b)\n",
+    "print(a-b)\n",
+    "print(a/b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "45190a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"Enter first num\"))\n",
+    "b = int(input(\"Eneter the second number\"))\n",
+    "c = int(input(\"Enter the third numb\"))\n",
+    "\n",
+    "print(a+b+c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b89641e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31.4135\n",
+      "78.53375\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = 3.14135\n",
+    "r = int(input(\"Enter the radius\"))\n",
+    "circum = 2*pi*r\n",
+    "area = pi * (r**2)\n",
+    "print(circum)\n",
+    "print(area)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cebf5767",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6480000\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = int(input(\"Enter the principal\"))\n",
+    "n = int(input(\"Enter number of years\"))\n",
+    "i = int(input(\"enter rate of interest\"))\n",
+    "\n",
+    "amount = p*((1+r)**n)\n",
+    "print(amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "abf0db93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before\n",
+      "a: 3\n",
+      "b: 4\n",
+      "after\n",
+      "a: 4\n",
+      "b: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"enter the first number\"))\n",
+    "b = int(input(\"enter the second number\"))\n",
+    "print(\"Before\")\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)\n",
+    "\n",
+    "a = a + b\n",
+    "b = a - b\n",
+    "a = a - b\n",
+    "\n",
+    "print(\"after\")\n",
+    "print(\"a:\",a)\n",
+    "print(\"b:\",b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4386c22d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = int(input(\"Enter the first number\"))\n",
+    "j = int(input(\"enter the second number\"))\n",
+    "\n",
+    "print(i==j)\n",
+    "print(i!=j)\n",
+    "print(i<j)\n",
+    "print(i>j)\n",
+    "print(i>=j)\n",
+    "print(i<=j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "613bee8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 rupees 50 Paisa\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = int(input(\"enter the paisa\"))\n",
+    "if(p<100):\n",
+    "    print(\"0 rupees\",p ,\"paisa\")\n",
+    "    \n",
+    "else:\n",
+    "    print(p//100,\"rupees\",p%100,\"Paisa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5bad16ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 hours 6 mins 0 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "sec = int(input(\"enter time in seconds: \"))\n",
+    "\n",
+    "if sec < 60:\n",
+    "    print(\"0 hour 0 minute\", sec, \"seconds\")\n",
+    "\n",
+    "else:\n",
+    "    h = sec // 3600\n",
+    "    min = (sec % 3600) // 60\n",
+    "    sec = sec % 60\n",
+    "    print(h, \"hours\", min, \"mins\", sec, \"seconds\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "71cf20c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 kms 430 meters\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = int(input(\"enter the meters: \"))\n",
+    "\n",
+    "if m < 1000:\n",
+    "    print(\"0 kms\", m, \"meters\")\n",
+    "else:\n",
+    "    print(m // 1000, \"kms\", m % 1000, \"meters\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41b48c76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 Rs notes: 7\n",
+      "50 Rs notes: 1\n",
+      "10 Rs notes: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "amount = int(input(\"Enter amount: \"))\n",
+    "\n",
+    "n100 = amount // 100\n",
+    "amount = amount % 100\n",
+    "\n",
+    "n50 = amount // 50\n",
+    "amount = amount % 50\n",
+    "\n",
+    "n10 = amount // 10\n",
+    "amount = amount % 10\n",
+    "\n",
+    "print(\"100 Rs notes:\", n100)\n",
+    "print(\"50 Rs notes:\", n50)\n",
+    "print(\"10 Rs notes:\", n10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc777d97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gross Salary = 104000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "basic = float(input(\"Enter base salary: \"))\n",
+    "da = 0.40 * basic\n",
+    "hra = 0.20 * basic\n",
+    "gross = basic + da + hra\n",
+    "print(\"Gross Salary =\", gross)"
    ]
   }
  ],
