--- a/Lab0/23051606_AD_Lab_0.1.ipynb
+++ b/Lab0/23051606_AD_Lab_0.1.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "[1, 2, 3, 4, 5, 56, 6]\n",
+      "[3, 4, 56, 6]\n",
       "[]\n"
      ]
     }
@@ -19,7 +19,7 @@
    "source": [
     "i=5\n",
     "print(i)\n",
-    "list = [1,2,3,4,5,56,6]\n",
+    "list = [3,4,56,6]\n",
     "print(list)\n",
     "list.clear()\n",
     "print(list)\n"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "eec37130",
    "metadata": {},
    "outputs": [
@@ -67,15 +67,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23051606\n",
-      "Omm Tripathi\n",
+      "23059090\n",
+      "Hardik\n",
       "BTECH - CSE\n"
      ]
     }
    ],
    "source": [
-    "roll_no = 23051606\n",
-    "name = \"Omm Tripathi\"\n",
+    "roll_no = 23059090\n",
+    "name = \"Hardik\"\n",
     "branch = \"BTECH - CSE\"\n",
     "print(roll_no)\n",
     "print(name)\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "375bec28",
    "metadata": {},
    "outputs": [
@@ -92,16 +92,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n",
-      "40\n",
-      "-3\n",
-      "0.625\n"
+      "19\n",
+      "90\n",
+      "-1\n",
+      "0.9\n"
      ]
     }
    ],
    "source": [
-    "a = 5 \n",
-    "b = 8\n",
+    "a = 9 \n",
+    "b = 10\n",
     "print(a+b)\n",
     "print(a*b)\n",
     "print(a-b)\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cebf5767",
    "metadata": {},
    "outputs": [
@@ -164,14 +164,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6480000\n"
+      "242000\n"
      ]
     }
    ],
    "source": [
     "p = int(input(\"Enter the principal\"))\n",
     "n = int(input(\"Enter number of years\"))\n",
-    "i = int(input(\"enter rate of interest\"))\n",
+    "r = int(input(\"enter rate of interest\"))\n",
     "\n",
     "amount = p*((1+r)**n)\n",
     "print(amount)"
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "abf0db93",
    "metadata": {},
    "outputs": [
@@ -188,11 +188,11 @@
      "output_type": "stream",
      "text": [
       "Before\n",
-      "a: 3\n",
-      "b: 4\n",
+      "a: 8\n",
+      "b: 9\n",
       "after\n",
-      "a: 4\n",
-      "b: 3\n"
+      "a: 9\n",
+      "b: 8\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "4386c22d",
    "metadata": {},
    "outputs": [
@@ -222,11 +222,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
-      "True\n",
       "True\n",
       "False\n",
       "False\n",
+      "False\n",
+      "True\n",
       "True\n"
      ]
     }
@@ -253,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 rupees 50 Paisa\n"
+      "9 rupees 50 Paisa\n"
      ]
     }
    ],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "5bad16ca",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 hours 6 mins 0 seconds\n"
+      "2 hours 26 mins 28 seconds\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 kms 430 meters\n"
+      "9 kms 899 meters\n"
      ]
     }
    ],
