--- a/Lab3/23051606_AD LAB-3.ipynb
+++ b/Lab3/23051606_AD LAB-3.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "67415ee6",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
    "source": [
     "arr1 = np.zeros(25)\n",
     "arr1[5:11] = 1\n",
-    "print(arr1)"
+    "print(arr1)\n"
    ]
   },
   {
