Pandas Lab5 & lab 6

--- a/Lab2/23051606_AD LAB-2.ipynb
+++ b/Lab2/23051606_AD LAB-2.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "2b8836f8",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10, 20, 30, 40, 50]\n",
+      "[1, 2, 3, 4, 5]\n",
       "(4, 5, 6, 7)\n"
      ]
     }
@@ -303,7 +303,7 @@
     "l2 = [6, 7]    \n",
     "\n",
     "l1.extend(tup1) \n",
-    "print(a)\n",
+    "print(l1)\n",
     "\n",
     "ntup = tup1 + tuple(l2)\n",
     "print(ntup)"
