--- a/Lab4/23051606_AD LAB-5.ipynb
+++ b/Lab4/23051606_AD LAB-5.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "765f2e95",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "f59dc19d",
    "metadata": {},
    "outputs": [
@@ -50,87 +50,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Series1: 0     10\n",
-      "1     11\n",
-      "2     12\n",
-      "3     13\n",
-      "4     14\n",
-      "5     15\n",
-      "6     16\n",
-      "7     17\n",
-      "8     18\n",
-      "9     19\n",
-      "10    20\n",
-      "dtype: int64\n",
-      "Series2: 0     20\n",
-      "1     21\n",
-      "2     22\n",
-      "3     23\n",
-      "4     24\n",
-      "5     25\n",
-      "6     26\n",
-      "7     27\n",
-      "8     28\n",
-      "9     29\n",
-      "10    30\n",
-      "dtype: int64\n",
-      "Add: 0     30\n",
-      "1     32\n",
-      "2     34\n",
-      "3     36\n",
-      "4     38\n",
-      "5     40\n",
-      "6     42\n",
-      "7     44\n",
-      "8     46\n",
-      "9     48\n",
-      "10    50\n",
-      "dtype: int64Subtraction: 0     10\n",
-      "1     10\n",
-      "2     10\n",
-      "3     10\n",
-      "4     10\n",
-      "5     10\n",
-      "6     10\n",
-      "7     10\n",
-      "8     10\n",
-      "9     10\n",
-      "10    10\n",
-      "dtype: int64Multiplication: 0     200\n",
-      "1     231\n",
-      "2     264\n",
-      "3     299\n",
-      "4     336\n",
-      "5     375\n",
-      "6     416\n",
-      "7     459\n",
-      "8     504\n",
-      "9     551\n",
-      "10    600\n",
-      "dtype: int64Division: 0     2.000000\n",
-      "1     1.909091\n",
-      "2     1.833333\n",
-      "3     1.769231\n",
-      "4     1.714286\n",
-      "5     1.666667\n",
-      "6     1.625000\n",
-      "7     1.588235\n",
-      "8     1.555556\n",
-      "9     1.526316\n",
-      "10    1.500000\n",
+      "Add: 0     8\n",
+      "1    10\n",
+      "2    12\n",
+      "3    14\n",
+      "4    16\n",
+      "5    18\n",
+      "dtype: int64Subtraction: 0    6\n",
+      "1    6\n",
+      "2    6\n",
+      "3    6\n",
+      "4    6\n",
+      "5    6\n",
+      "dtype: int64Multiplication: 0     7\n",
+      "1    16\n",
+      "2    27\n",
+      "3    40\n",
+      "4    55\n",
+      "5    72\n",
+      "dtype: int64Division: 0    7.0\n",
+      "1    4.0\n",
+      "2    3.0\n",
+      "3    2.5\n",
+      "4    2.2\n",
+      "5    2.0\n",
       "dtype: float64"
      ]
     }
    ],
    "source": [
-    "s1  = [10,11,12,13,14,15,16,17,18,19,20]\n",
-    "s2  = [20,21,22,23,24,25,26,27,28,29,30]\n",
+    "s1  = [1,2,3,4,5,6]\n",
+    "s2  = [7,8,9,10,11,12]\n",
     "\n",
     "st1 = pd.Series(s1)\n",
     "st2 = pd.Series(s2)\n",
     "\n",
-    "print(\"Series1:\",st1)\n",
-    "print(\"Series2:\",st2)\n",
+    "# print(\"Series1:\",st1)\n",
+    "# print(\"Series2:\",st2)\n",
     "\n",
     "print(\"Add:\",st1+st2,end='')\n",
     "print(\"Subtraction:\",st2-st1,end='')\n",
