--- a/Lab4/23051606_AD LAB-6.ipynb
+++ b/Lab4/23051606_AD LAB-6.ipynb
@@ -9,13 +9,13 @@
     "Name - Omm Tripathi | \n",
     "Roll No - 23051606 | \n",
     "Section - CSE-35 | \n",
-    "Lab - 5 |\n",
+    "Lab - 6 |\n",
     "Assignment- 0.62"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f6283e8b",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "12b5c4f4",
    "metadata": {},
    "outputs": [
@@ -106,6 +106,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "sum of each student marks\n",
       "    Name  Maths  Science  English Result\n",
       "0   Amit     78       85       70   Pass\n",
       "1   Rina     45       40       50   Fail\n",
@@ -126,9 +127,9 @@
     "avg = sum/3\n",
     "df['Result'] = np.where(avg > 50, 'Pass', 'Fail')\n",
     "print(\"sum of each student marks\")\n",
-    "print(sum)\n",
-    "print(\"average of each student marks\")\n",
-    "print(avg)\n",
+    "# print(sum)\n",
+    "# print(\"average of each student marks\")\n",
+    "# print(avg)\n",
     "\n",
     "print(df)\n"
    ]
