Pomlab Result Updated

--- a/Lab6/23051606_PoM-Lab1.ipynb
+++ b/Lab6/23051606_PoM-Lab1.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "81469c84",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "(50, 1)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "id": "d055c344",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "(35, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "b922a4e0",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,11 @@
     "y_pred  = lr.predict(X_test)\n",
     "print(\"Mean_squared_error:\",mean_squared_error(y_test,y_pred))\n",
     "print(\"Mean_absolute_error:\",mean_absolute_error(y_test,y_pred))\n",
-    "print(\"R2_Score:\",r2_score(y_test,y_pred))"
+    "print(\"R2_Score:\",r2_score(y_test,y_pred))\n",
+    "small = []\n",
+    "small.append(mean_squared_error(y_test,y_pred))\n",
+    "small.append(mean_absolute_error(y_test,y_pred))\n",
+    "small.append(r2_score(y_test,y_pred))"
    ]
   },
   {
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "d71baa51",
    "metadata": {},
    "outputs": [
@@ -281,7 +285,7 @@
        "4          4926     965419"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "e37c3c08",
    "metadata": {},
    "outputs": [],
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "id": "08ebeee9",
    "metadata": {},
    "outputs": [
@@ -314,7 +318,7 @@
        "(350, 1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "63d25373",
    "metadata": {},
    "outputs": [
@@ -346,7 +350,87 @@
     "y_pred  = lr.predict(X_test)\n",
     "print(\"Mean_squared_error:\",mean_squared_error(y_test,y_pred))\n",
     "print(\"Mean_absolute_error:\",mean_absolute_error(y_test,y_pred))\n",
-    "print(\"R2_Score:\",r2_score(y_test,y_pred))"
+    "print(\"R2_Score:\",r2_score(y_test,y_pred))\n",
+    "\n",
+    "large = []\n",
+    "large.append(mean_squared_error(y_test,y_pred))\n",
+    "large.append(mean_absolute_error(y_test,y_pred))\n",
+    "large.append(r2_score(y_test,y_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "ab498668",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Small Dataset</th>\n",
+       "      <th>Large Dataset</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MSE</th>\n",
+       "      <td>8.290186e+08</td>\n",
+       "      <td>3.047983e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MAE</th>\n",
+       "      <td>2.631779e+04</td>\n",
+       "      <td>4.808450e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>R2</th>\n",
+       "      <td>9.591883e-01</td>\n",
+       "      <td>9.522115e-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Small Dataset  Large Dataset\n",
+       "MSE   8.290186e+08   3.047983e+09\n",
+       "MAE   2.631779e+04   4.808450e+04\n",
+       "R2    9.591883e-01   9.522115e-01"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = pd.DataFrame(\n",
+    "    {\n",
+    "        'Small Dataset': small,\n",
+    "        'Large Dataset': large\n",
+    "    },\n",
+    "    index=['MSE', 'MAE', 'R2']\n",
+    ")\n",
+    "\n",
+    "result\n"
    ]
   }
  ],
