--- a/Lab6/23051606_PoM-Lab1.ipynb
+++ b/Lab6/23051606_PoM-Lab1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "id": "500fe20a",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "id": "a43720ad",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "4          2138     338848"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,19 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "id": "a37b5212",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split \n",
-    "from sklearn.metrics import mean_absolute_error,mean_squared_error,r2_score\n",
+    "from sklearn.metrics import mean_absolute_error,mean_squared_error,r2_score,root_mean_squared_error\n",
     "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "id": "81469c84",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "(50, 1)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "id": "d055c344",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
        "(35, 1)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "id": "b922a4e0",
    "metadata": {},
    "outputs": [
@@ -190,6 +190,7 @@
      "text": [
       "Mean_squared_error: 829018585.3451355\n",
       "Mean_absolute_error: 26317.788409200442\n",
+      "Root_mean_squared_error: 28792.68284382571\n",
       "R2_Score: 0.9591882869008164\n"
      ]
     }
@@ -200,10 +201,12 @@
     "y_pred  = lr.predict(X_test)\n",
     "print(\"Mean_squared_error:\",mean_squared_error(y_test,y_pred))\n",
     "print(\"Mean_absolute_error:\",mean_absolute_error(y_test,y_pred))\n",
+    "print(\"Root_mean_squared_error:\",root_mean_squared_error(y_test,y_pred))\n",
     "print(\"R2_Score:\",r2_score(y_test,y_pred))\n",
     "small = []\n",
     "small.append(mean_squared_error(y_test,y_pred))\n",
     "small.append(mean_absolute_error(y_test,y_pred))\n",
+    "small.append(root_mean_squared_error(y_test,y_pred))\n",
     "small.append(r2_score(y_test,y_pred))"
    ]
   },
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "id": "d71baa51",
    "metadata": {},
    "outputs": [
@@ -285,7 +288,7 @@
        "4          4926     965419"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "e37c3c08",
    "metadata": {},
    "outputs": [],
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "id": "08ebeee9",
    "metadata": {},
    "outputs": [
@@ -318,7 +321,7 @@
        "(350, 1)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "63d25373",
    "metadata": {},
    "outputs": [
@@ -340,6 +343,7 @@
      "text": [
       "Mean_squared_error: 3047982941.9636383\n",
       "Mean_absolute_error: 48084.504771489046\n",
+      "Root_mean_squared_error: 55208.54048028836\n",
       "R2_Score: 0.9522115167874217\n"
      ]
     }
@@ -350,17 +354,19 @@
     "y_pred  = lr.predict(X_test)\n",
     "print(\"Mean_squared_error:\",mean_squared_error(y_test,y_pred))\n",
     "print(\"Mean_absolute_error:\",mean_absolute_error(y_test,y_pred))\n",
+    "print(\"Root_mean_squared_error:\",root_mean_squared_error(y_test,y_pred))\n",
     "print(\"R2_Score:\",r2_score(y_test,y_pred))\n",
     "\n",
     "large = []\n",
     "large.append(mean_squared_error(y_test,y_pred))\n",
     "large.append(mean_absolute_error(y_test,y_pred))\n",
+    "large.append(root_mean_squared_error(y_test,y_pred))\n",
     "large.append(r2_score(y_test,y_pred))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "id": "ab498668",
    "metadata": {},
    "outputs": [
@@ -401,6 +407,11 @@
        "      <td>4.808450e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>RMSE</th>\n",
+       "      <td>2.879268e+04</td>\n",
+       "      <td>5.520854e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>R2</th>\n",
        "      <td>9.591883e-01</td>\n",
        "      <td>9.522115e-01</td>\n",
@@ -410,13 +421,14 @@
        "</div>"
       ],
       "text/plain": [
-       "     Small Dataset  Large Dataset\n",
-       "MSE   8.290186e+08   3.047983e+09\n",
-       "MAE   2.631779e+04   4.808450e+04\n",
-       "R2    9.591883e-01   9.522115e-01"
+       "      Small Dataset  Large Dataset\n",
+       "MSE    8.290186e+08   3.047983e+09\n",
+       "MAE    2.631779e+04   4.808450e+04\n",
+       "RMSE   2.879268e+04   5.520854e+04\n",
+       "R2     9.591883e-01   9.522115e-01"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +439,7 @@
     "        'Small Dataset': small,\n",
     "        'Large Dataset': large\n",
     "    },\n",
-    "    index=['MSE', 'MAE', 'R2']\n",
+    "    index=['MSE', 'MAE','RMSE', 'R2']\n",
     ")\n",
     "\n",
     "result\n"
